fix: buttons on Mobile

--- a/style.css
+++ b/style.css
@@ -174,36 +174,36 @@ canvas {
   }
 
   #btnRight {
-    width: 33px;
-    height: 33px;
+    width: 33px !important;
+    height: 33px !important;
   }
 
   #btnLeft {
-    width: 35px;
-    height: 35px;
+    width: 35px !important;
+    height: 35px !important;
   }
 
   #btnJump {
-    width: 35px;
-    height: 35px;
+    width: 35px !important;
+    height: 35px !important;
   }
 
   #btnThrow {
-    width: 35px;
-    height: 35px;
+    width: 35px !important;
+    height: 35px !important;
   }
   #muteButton {
-    top: 10px;
-    left: 48%;
-    z-index: 10;
-    width: 15px;
-    height: 15px;
+    top: 10px !important;
+    left: 48% !important;
+    z-index: 10 !important;
+    width: 15px !important;
+    height: 15px !important;
   }
 
   #muteIcon {
-    z-index: 10;
-    width: 25px;
-    height: 25px;
+    z-index: 10 !important;
+    width: 25px !important;
+    height: 25px !important;
   }
 }
 
